authorization, product details fix
js helper had major issues so fixed it
added authentication in vulnerable places

--- a/shop-web-app/Views/Product/Details.cshtml
+++ b/shop-web-app/Views/Product/Details.cshtml
@@ -143,13 +143,13 @@
                             @if (User.Identity.IsAuthenticated)
                             {
                                 <button type="button" class="btn btn-success" id="addToCart" onclick="addToCart()">
-                                    <span class="sr-only">Dodaj do koszyka</span>
+                                    <span class="sr-only"><i class="bi bi-bag"></i> Do koszyka</span>
                                 </button>
                             }
                             else
                             {
                                 <a type="button" class="btn btn-success" id="addToCart" asp-area="" asp-controller="Account" asp-action="Login">
-                                    <span class="sr-only">Dodaj do koszyka</span>
+                                    <span class="sr-only"><i class="bi bi-bag"></i> Do koszyka</span>
                                 </a>
                             }
                             
